<?xml version="1.0" encoding="utf-8"?>
<!-- 
 /*
 ** Enable Viacam for Android, a camera based mouse emulator
 **
 ** Copyright (C) 2015 Cesar Mauri Loba (CREA Software Systems)
 **
 ** This program is free software: you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
 ** the Free Software Foundation, either version 3 of the License, or
 ** (at your option) any later version.
 **
 ** This program is distributed in the hope that it will be useful,
 ** but WITHOUT ANY WARRANTY; without even the implied warranty of
 ** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ** GNU General Public License for more details.
 **
 ** You should have received a copy of the GNU General Public License
 ** along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<resources>

    <string name="app_name">Enable Viacam Mobile</string>
    <string name="service_name">Enable Viacam Mobile</string>
    <string name="eviacam_service_description">Enable Viacam Mobile is a mouse replacement software that moves the pointer as you move your head.</string>
    <string name="eviacam_preferences_title">Enable Viacam Mobile settings</string>
    <string name="motion_settings">Motion settings</string>
    <string name="x_axis_speed">X axis speed</string>
    <string name="x_axis_speed_summary">Sets response sensitivity for the X axis</string>
    <string name="y_axis_speed">Y axis speed</string>
    <string name="y_axis_speed_summary">Sets response sensitivity for the Y axis</string>
    <string name="acceleration">Acceleration</string>
    <string name="acceleration_summary">Set pointer acceleration. 0 disables</string>
    <string name="clic_settings">Click settings</string>
    <string name="detection_settings">Detection settings</string>
    <string name="never">Never</string>
    <string name="dwell_area">Dwell area</string>
    <string name="dwell_area_summary">Maximum allowed displacement before restarting the dwell time</string>
    <string name="dwell_time">Dwell time</string>
    <string name="dwell_time_summary">Time to wait (deciseconds) before making click</string>
    <string name="after_five_seconds">After 5 seconds</string>
    <string name="motion_smoothing">Motion smoothing</string>
    <string name="motion_smoothing_summary">Tremor reduction filter. 0 disables</string> 
    <string name="motion_threshold">Motion threshold</string>
    <string name="motion_threshold_summary">Minimum displacement (in pixels) to start moving pointer</string>
    <string name="after_one_minute">After 1 minute</string>
    <string name="sound_on_click">Play sound on click</string>
    <string name="consecutive_clicks">Enable consecutive clicks</string>
    <string name="after_ten_seconds">After 10 seconds</string>
    <string name="after_thirty_seconds">After 30 seconds</string>
    <string name="time_without_detection">Stop pointer when face not detected</string>
    <string name="click">Click</string>
    <string name="long_click">Long click</string>
    <string name="collapse">Collapse</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="dismiss">Dismiss</string>
    <string name="expand">Expand</string>
    <string name="paste">Paste</string>
    <string name="scroll_backward">Scroll backward</string>
    <string name="scroll_forward">Scroll forward</string>
    <string name="select">Select</string>
    <string name="running_click_to_pause">Running (click to pause)</string>
    <string name="stopped_click_to_resume">Stopped (click to resume)</string>
    <string name="back_button">Back button</string>
    <string name="home_button">Home button</string>
    <string name="recents_button">Recents button</string>
    <string name="notifications_button">Notifications button</string>
    <string name="interface_settings">Interface settings</string>
    <string name="dock_panel_button">Expand/collapse dock menu</string>
    <string name="softkeyboard_button">Open/close softkeyboard</string>
    <string name="scroll_refresh_button">Refresh scrolling buttons</string>
    <string name="disable_click_button">Disable click</string>
    <string name="docking_panel_edge">Dock menu position</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="installation_cancelled">Installation cancelled</string>
    <string name="needs_opencv_retry"> needs OpenCV manager to run. Retry installation?</string>
    <string name="ui_elements_size">Interface elements size</string>
    <string name="xlarge">Extra large</string>
    <string name="large">Large</string>
    <string name="normal">Normal</string>
    <string name="small">Small</string>
    <string name="crash_toast_text">Oops! Enable Viacam crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing Enable Viacam Mobile to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    
    <string name="gamepad_settings">Gamepad settings</string>
    <string name="gamepad_location">Gamepad location</string>
    <string name="top_left">Top left</string>
    <string name="bottom_left">Bottom left</string>
    <string name="top_center">Top center</string>
    <string name="bottom_center">Bottom center</string>
    <string name="top_right">Top right</string>
    <string name="bottom_right">Bottom right</string>
    
    <string name="eviacam_slave_mode_preferences_title">Enable Viacam slave mode settings</string>
    <string name="gamepad_interface_settings">Gamepad interface</string>
    <string name="gamepad_transparency">Transparency</string>
    <string name="gamepad_abs_speed">Abs. mode speed</string>
    <string name="gamepad_abs_speed_summary">Speed when using absolute mode</string>
    <string name="gamepad_rel_sensitivity">Rel. mode sensitivity</string>
    <string name="gamepad_rel_sensitivity_summary">Sensitivity when using relative mode (low values set high sensitivity)</string>

</resources>
