<?xml version="1.0" encoding="utf-8"?>
<!-- 
 /*
 ** Enable Viacam for Android, a camera based mouse emulator
 **
 ** Copyright (C) 2015 Cesar Mauri Loba (CREA Software Systems)
 **
 ** This program is free software: you can redistribute it and/or modify
 ** it under the terms of the GNU General Public License as published by
 ** the Free Software Foundation, either version 3 of the License, or
 ** (at your option) any later version.
 **
 ** This program is distributed in the hope that it will be useful,
 ** but WITHOUT ANY WARRANTY; without even the implied warranty of
 ** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ** GNU General Public License for more details.
 **
 ** You should have received a copy of the GNU General Public License
 ** along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/collapsible_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="@color/half_alpha"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="32dip"
        android:layout_height="32dip"	        
        android:background="@drawable/back_icon"
        android:contentDescription="@string/back_button" />
    
    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:background="@drawable/home_icon" 
        android:contentDescription="@string/home_button" />
    
    <ImageButton
        android:id="@+id/recents_button"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:background="@drawable/recents_icon" 
        android:contentDescription="@string/recents_button" />

</LinearLayout>
